--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-  background-color: rgb(255,205,0);
+  background-color: rgb(255, 174, 0);
   font-size: 0
 }
 
@@ -57,7 +57,7 @@ nav a {
 }
 
 a:hover {
-  background-color: blue;
+  background-color: black;
   color: white;
 }
 
@@ -116,5 +116,5 @@ section p {
 }	
 
 .home {
-    width: 200px;
+    width: 400px;
 }
